@@ -5,16 +5,17 @@ import org.example.spring_security.model.User;
 import org.example.spring_security.repository.RoleRepository;
 import org.example.spring_security.repository.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Collections;
-import java.util.HashSet;
+import java.util.Collection;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Service
@@ -25,22 +26,33 @@ public class UserService implements UserDetailsService {
 
     private final RoleRepository roleRepository;
 
-
     @Autowired
     public UserService(UserRepository userRepository, RoleRepository roleRepository) {
         this.userRepository = userRepository;
         this.roleRepository = roleRepository;
     }
-    @Override
-    public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        User user = userRepository.findByLogin(username);
-        if (user == null) {
-            throw new UsernameNotFoundException("User not found");
-        }
-        return user;
+
+    public User findByUsername(String userName) {
+        return userRepository.findByUsername(userName);
     }
+
+    @Override
+    @Transactional
+    public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
+        User user = findByUsername(username);
+        if (user == null) {
+            throw new UsernameNotFoundException(String.format("User '%s' not found", username));
+        }
+        List<Role> roles = user.getRoles();
+        return new org.springframework.security.core.userdetails.User(user.getUsername(), user.getPassword(), getAuthorities(roles));
+    }
+
+    public Collection<? extends GrantedAuthority> getAuthorities(Collection<Role> roles) {
+        return roles.stream().map(role -> new SimpleGrantedAuthority(role.getName())).collect(Collectors.toList());
+    }
+
     public List<User> findAll() {
-        return (List<User>)userRepository.findAll();
+        return userRepository.findAll();
     }
 
     public User findById(Long id) {
@@ -49,8 +61,8 @@ public class UserService implements UserDetailsService {
 
     @Transactional
     public void registerUser(User user) {
-        Role userRole = roleRepository.findByName("USER");
-        user.setRoles(Stream.of(userRole).toList());
+        Role userRole = roleRepository.findByName("ROLE_USER");
+        user.setRoles(Stream.of(userRole).collect(Collectors.toList()));
         userRepository.save(user);
     }
 
@@ -65,32 +77,9 @@ public class UserService implements UserDetailsService {
     }
 
     @Transactional
-    public void edit(Long id, User user) {
-        User existingUser = findById(id);
-        existingUser.setUsername(user.getUsername());
-        existingUser.setLastName(user.getLastName());
-        existingUser.setAge(user.getAge());
-        existingUser.setEmail(user.getEmail());
+    public void edit(User user) {
         userRepository.save(user);
     }
-
-
-    @Transactional
-    public void addRole(Long id) {
-        User user = findById(id);
-        Role adminRole = roleRepository.findByName("ADMIN");
-        user.getRoles().add(adminRole);
-        save(user);
-    }
-
-    @Transactional
-    public void deleteRole(Long id) {
-        User user = findById(id);
-        Role adminRole = roleRepository.findByName("ADMIN");
-        user.getRoles().remove(adminRole);
-        save(user);
-    }
-
 
 }
 
